@@ -1,6 +1,9 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.005003, see misc/*.deps* for details
+ - develop: (suggests: ↑2)
 
 0.005003 2017-03-03T22:36:43Z c92d181
  [Bugfix]
